# TestTask_ItWorkin

./: .env.template  README.MD  docker-compose.yml  pyproject.toml  requirements.txt
backend/: Dockerfile
backend/app/: init_app.py  main.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: e68337d7faba_0.py
backend/app/api/v1/: api_routers.py
backend/app/api/v1/endpoints/: api_routers.py  auth.py  media.py  message.py  routers.py  user.py
backend/app/auth_backend/: auth_backend.py  user_manager.py
backend/app/auth_backend/utils/: jwt_token.py  password_helper.py
backend/app/configs/: app_configs.py
backend/app/core/: upload_file.py
backend/app/crud/: base_class.py  media.py  message.py  user.py
backend/app/db_alchemy/: base.py  session.py
backend/app/dependencies/: current_user.py  db_session.py  user.py
backend/app/exceptions/: custom_excaptions.py  handlers.py
backend/app/models/: example_models.py  image.py  message.py  user.py  users.py
backend/app/schemas/: media.py  message.py  user.py
